# Jarvis

./: .env.example  .gitignore  .pylintrc  Dockerfile  cli.py  compose.yaml  config.py  hello_world.py  main.py  main2.py  pyproject.toml  temp.py  test_sonos.py  voice_assistant.yaml
.github/: copilot-instructions.md
agent/: __init__.py  agent.py  service.py
agent/config/: __init__.py  env.py  loader.py  models.py  views.py
agent/controller/: base.py  controller.py  service_factory.py  voice_assistant_controller.py
agent/events/: __init__.py  bus.py  dispatcher.py  models.py
agent/mic/: __init__.py  capture.py  detector.py
agent/realtime/: audio_stream_manager.py  current_message_context.py  event_bus.py  event_handler.py  event_types.py  message_manager,py  message_manager.py  realtime_api.py  reatlime_client.py  views.py  websocket_manager.py
agent/sound/: __init__.py  handler.py  models.py  player.py
agent/state/: __init__.py  base.py  context.py  effects.py  error.py  idle.py  listening.py  responding.py  state.mmd  timeout.py  timeout_service.py  tool_calling.py
agent/tools/: executor.py  models.py  service.py
agent/transcription/: __init__.py  (+2 more)
audio/: __init__.py  audio_player.py  audio_player_base.py  capture.py  config.py  detection.py  file_player.py  sound_event_handler.py  sound_file_player.py  sound_player.py  static_audio_player.py  views.py  wake_word_listener.py
core/: mic_stream.py
jarvis/: __init__.py  _logging.py  service.py  views.py
rtvoice/: __init__.py  service.py
shared/: logging_mixin.py  singleton_decorator.py
(+142 files in other folders)
