[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "numpy>=2.3.2",
    "openai[realtime]>=1.102.0",
    "pvporcupine>=3.0.5",
    "pyaudio>=0.2.14",
    "pydantic>=2.11.7",
    "pygame>=2.6.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "tavily-python>=0.7.11",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
