[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "hueify[mcp]>=0.3.0",
    "lameenc>=1.8.1",
    "numpy>=2.4.2",
    "openwakeword>=0.4.0",
    "pyaudio>=0.2.14",
    "rtvoice[audio]>=0.4.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
]
